--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 
 .description {
     font-size: 1.5rem;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     text-shadow: #fff 0px 0px 10px;
 }
 
@@ -106,4 +106,37 @@ button {
     border: none;
     padding: 0;
     font: inherit;
+}
+
+i {
+    color: #fff;
+    text-shadow: #fff 0px 0px 2px;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.bi {
+    color: #fff;
+    text-shadow: #fff 0px 0px 2px;
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.styledbutton {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    padding: 10px;
+    color: white;
+    backdrop-filter: blur(2.5px);
+    width: fit-content;
+    margin-top: 10px;
+    opacity: 1;
+    transition: all 0.5s ease;
+}
+
+.styledbutton:hover {
+    background-color: rgba(0, 0, 0, 0.9);
+    transform: translateY(-5px);
 }
