--- a/css/style.css
+++ b/css/style.css
@@ -117,17 +117,14 @@ i {
 }
 
 .bi {
-    color: #fff;
-    text-shadow: #fff 0px 0px 2px;
     font-size: 2.5rem;
-    margin-bottom: 10px;
-    cursor: pointer;
 }
 
 .styledbutton {
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
     padding: 10px;
+    margin: 5px;
     color: white;
     backdrop-filter: blur(2.5px);
     width: fit-content;
