--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 .frame {
     width: 25%;
-    height: 25%;
+    height: fit-content;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     margin: auto;
@@ -121,7 +121,7 @@ i {
 }
 
 .styledbutton {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.116);
     border-radius: 10px;
     padding: 10px;
     margin: 5px;
@@ -134,6 +134,6 @@ i {
 }
 
 .styledbutton:hover {
-    background-color: rgba(0, 0, 0, 0.9);
-    transform: translateY(-5px);
+    background-color: rgba(255, 255, 255, 0.216);
+    transform: scale(1.1);
 }
