--- a/css/style.css
+++ b/css/style.css
@@ -1,139 +1,1 @@
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    background-image: url(https://c0.wallpaperflare.com/path/476/183/779/arches-architecture-black-and-white-building-27a762e47f96a2e1851820e9e5cadc9b.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #fff;
-    font-family: Satoshi,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
-}
-
-.frame {
-    width: 25%;
-    height: fit-content;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    margin: auto;
-    padding: 10px;
-    text-align: center;
-    color: white;
-    backdrop-filter: blur(2.5px);
-    opacity: 0;
-}
-
-.discordframe {
-    display: flex;
-    position: absolute;
-    top: 0;
-    left: 5;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.116);
-    border-radius: 10px;
-    padding: 10px;
-    color: white;
-    backdrop-filter: blur(2.5px);
-    width: fit-content;
-    padding-right: 20px;
-    margin-top: 10px;
-    z-index: 2;
-    opacity: 0;
-}
-
-.text-container {
-    display: flex;
-    flex-direction: column;
-    margin-left: 15px;
-}
-
-
-.description {
-    font-size: 1.5rem;
-    margin-bottom: 15px;
-    text-shadow: #fff 0px 0px 10px;
-}
-
-.username {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    text-shadow: #fff 0px 0px 10px;
-    font-weight: bold;
-}
-
-.discordactivity {
-    font-size: 1.3rem;
-    text-shadow: #fff 0px 0px 10px;
-    font-weight: bold;
-}
-
-.discorddetails {
-    font-size: 1rem;
-    text-shadow: #fff 0px 0px 10px;
-    margin-top: -15px;
-}
-
-.profilepic {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-image: url(https://cdn.discordapp.com/avatars/1105349571678318672/ecd76089be6de72a612abd0671a5ef28.webp?size=80);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.clickme {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    color: #fff;
-    text-shadow: #fff 0px 0px 10px;
-    font-weight: bold;
-    cursor: pointer;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 4;
-    transition: all 0.5s ease;
-}
-
-button {
-    background: none;
-    border: none;
-    padding: 0;
-    font: inherit;
-}
-
-i {
-    color: #fff;
-    text-shadow: #fff 0px 0px 2px;
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
-.bi {
-    font-size: 2.5rem;
-}
-
-.styledbutton {
-    background-color: rgba(255, 255, 255, 0.116);
-    border-radius: 10px;
-    padding: 10px;
-    margin: 5px;
-    color: white;
-    backdrop-filter: blur(2.5px);
-    width: fit-content;
-    margin-top: 10px;
-    opacity: 1;
-    transition: all 0.5s ease;
-}
-
-.styledbutton:hover {
-    background-color: rgba(255, 255, 255, 0.216);
-    transform: scale(1.1);
-}
+.discordframe,.frame{border-radius:10px;backdrop-filter:blur(2.5px);opacity:0}.description,.username{font-size:1.5rem}.profilepic,body{background-repeat:no-repeat;background-size:cover}.clickme,.discordactivity,.username{text-shadow:#fff 0 0 10px;font-weight:700}.clickme,i{cursor:pointer}.discordframe,.frame,.styledbutton{backdrop-filter:blur(2.5px)}.clickme,.styledbutton{color:#fff;transition:.5s}#buttonvol,.frame{opacity:0}body{display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;margin:0;overflow:hidden;background-image:url(https://c0.wallpaperflare.com/path/476/183/779/arches-architecture-black-and-white-building-27a762e47f96a2e1851820e9e5cadc9b.jpg);color:#fff;font-family:Satoshi,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji}.frame{width:25%;height:fit-content;background-color:rgba(0,0,0,.5);margin:auto;padding:10px;text-align:center;color:#fff}.discordframe{display:flex;position:absolute;top:0;left:5;align-items:center;background-color:rgba(255,255,255,.116);padding:10px 20px 10px 10px;color:#fff;width:fit-content;margin-top:10px;z-index:2}.text-container{display:flex;flex-direction:column;margin-left:15px}.description{margin-bottom:15px;text-shadow:#fff 0 0 10px}.clickme,.username,i{margin-bottom:10px}.discordactivity{font-size:1.3rem}.discorddetails{font-size:1rem;text-shadow:#fff 0 0 10px;margin-top:-15px}.profilepic{width:80px;height:80px;border-radius:50%;background-image:url(https://cdn.discordapp.com/avatars/1105349571678318672/ecd76089be6de72a612abd0671a5ef28.webp?size=80)}.clickme{font-size:1.5rem;position:fixed;top:0;left:0;width:100%;height:100%;background-color:rgba(0,0,0,.5);z-index:4}button{background:0 0;border:none;padding:0;font:inherit}i{color:#fff;text-shadow:#fff 0 0 2px;font-size:1.5rem}.bi{font-size:2.5rem}.styledbutton{background-color:rgba(255,255,255,.116);border-radius:10px;padding:10px;margin:10px 5px 5px;width:fit-content;opacity:1}.styledbutton:hover{background-color:rgba(255,255,255,.216);transform:scale(1.1)}
